# gordie

./: .dockerignore  .env.example  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  main.py  pyproject.toml
agent/: AgentGraph.py  ControllerAgent.py  OnboardingAgent.py  PlayerAddAgent.py  PlayerComparisonAgent.py  SupervisorAgent.py  agent_state.py  async_custom_checkpointer.py  async_graph_builder.py  checkpoint_reader.py  checkpointer.py  context_node.py  context_resolvers.py  context_types.py  context_validator.py  custom_checkpointer.py  data_quality_node.py  digest_writer.py  email_enrichment.py  email_node.py  graph_builder.py  memory_store.py  response_models.py  response_node.py  routing_schemas.py  sport_inference.py  voice_rewrite_node.py
alembic/: env.py
billing/: __init__.py  creem_client.py  errors.py  gateway.py  jobs.py  repository.py  tier.py  webhook.py
client/: AuthenticatedYahooClient.py  DuckDbClient.py  __init__.py  authenticated_yahoo_client.py  duck_db_client.py  moneypuck_cli.py  moneypuck_client.py  oauth_manager.py
config/: cloudflare-tunnel-config.example.yml  cloudflare-tunnel-config.yml  loki-config.yml  prometheus.yml  promtail-config.yml  tempo-config.yml
data/: conversation_repository.py  database.py  digest_injury_state_repository.py  discord_interaction_repository.py  models.py  nhl_player_stats_repository.py  notification_preference_repository.py  pending_oauth_repository.py  pending_user_repository.py  processed_inbound_message_repository.py  pydantic_models.py  repository.py  schemas.py  sms_thread_repository.py  subscription_repository.py  temporary_session_repository.py  thread_repository.py  user_repository.py  web_thread_repository.py  yahoo_league_repository.py  yahoo_token_repository.py  yahoo_user_team_repository.py
docs/: digest-flow.md  message-flow.md
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wrangler.toml
middleware/: auto_ack.py  sport_tool_filter.py  state_logger.py  tool_call_error_wrapper.py
module/: config.py  config_requirements.py  config_validator.py  llm.py  logger.py  metrics.py  tracing.py
scheduled/: __init__.py  channel_resolver.py  job_runner.py  jobs.py  refresh_mlb_stats_db.py  refresh_stats_db.py  weekly_digest.py
scripts/: __init__.py  add_user.py  add_yahoo_league.py  add_yahoo_user_team.py  deploy-frontend.sh  deploy.sh  fetch_daily_boxscores.py  fetch_past_30_days.py  get_user.py  message_agent.py  migrate_duckdb_to_postgres.py  onboard_user.py  reset_databases.sh  run_duckdb.sh  run_psql.sh  setup.py  start_maintenance.py  start_oauth_server.py  start_server.py  start_tunnel.sh  test_comprehensive_stats.py  update_user.py
server/: EmailService.py  OAuthCallbackServer.py  WebhookVerification.py  __init__.py  discord_gateway.py  discord_message_processor.py  discord_service.py  email_formatter.py  email_service.py  email_thread_manager.py  maintenance_server.py  oauth.py  oauth_callback_server.py  oauth_config.py  oauth_link_service.py  oauth_nonce.py  server.py  sms_intent_classifier.py  sms_service.py  thread_manager.py  tier_enforcement.py  webhook_verification.py
tests/: README.md  conftest.py  test_available_schemas.py  test_billing_tools.py  (+22 more)
(+279 files in other folders)
