[project]
name = "fantasy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "flask>=3.1.2",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "nhl-api-py>=3.1.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "yfpy>=17.0.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "module*", "client*", "server*"]
