[project]
name = "fantasy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentevals>=0.0.9",
    "alembic>=1.14.0",
    "dotenv>=0.9.9",
    "quart>=0.20.0",
    "hypercorn>=0.17.0",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "markdown2>=2.5.4",
    "nhl-api-py>=3.1.1",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "yfpy>=17.0.0",
    "python-json-logger>=2.0.7",
    "apscheduler>=3.10.4",
    "pytest-cov>=7.0.0",
    "duckdb>=1.0.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "pybaseball>=2.2.7",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    ".claude",
    ".codex",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

# Set the maximum line length
line-length = 100

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fantasy_hockey_agent", "fantasy_tools", "modules", "tools"]

[tool.setuptools.packages.find]
include = ["tools*", "module*", "client*", "server*"]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
markers = [
    "integration: tests that invoke the real LLM (non-deterministic, slow)",
]

[tool.basedpyright]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "data_test_examples",
    ".claude",
    ".codex",
]

[tool.uv.sources]
